--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.22.1",
+    "framer-motion": "^11.11.17",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
