--- a/.github/workflows/main_softcanada.yml
+++ b/.github/workflows/main_softcanada.yml
@@ -13,13 +13,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js version and cache dependencies
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
+          cache: "npm"
 
-      - name: Install production dependencies
-        run: npm ci --only=production
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build app
         run: npm run build --if-present
