Update deployment workflow to copy next.config.ts instead of next.config.js

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           cp -R .next deploy/.next
           cp -R public deploy/public
           cp package*.json deploy/
-          cp next.config.js deploy/
+          cp next.config.ts deploy/
           # If you have environment variables, copy them
           # cp .env.production deploy/.env
           # Copy any other necessary files
