--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,50 +13,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      # Step 2: Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
+          cache: "npm"
 
-      - name: Cache node_modules
-        id: node-cache
+      # Step 3: Cache npm dependencies
+      - name: Cache Node.js modules
         uses: actions/cache@v3
         with:
-          path: |
-            **/node_modules
+          path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
+      # Step 4: Install dependencies with npm ci
       - name: Install dependencies
         run: npm ci
 
-      - name: Build app
+      # Step 5: Build the application
+      - name: Build the Next.js app
         run: npm run build
 
-      - name: Cache .next build folder
-        uses: actions/cache@v3
-        with:
-          path: .next/cache
-          key: ${{ runner.os }}-next-${{ hashFiles('package-lock.json') }}
-
-      - name: Prepare deployment package
-        run: |
-          mkdir deploy
-          cp -R .next deploy/.next
-          cp -R public deploy/public
-          cp package*.json deploy/
-          cp next.config.ts deploy/
-          # If you have environment variables, copy them
-          # cp .env.production deploy/.env
-          # Copy any other necessary files
-
-      - name: Deploy app to Azure Web App
+      # Step 6: Deploy to Azure App Service
+      - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: "./deploy"
+          package: "."
