--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,59 @@
-name: Build and Deploy SoftCan App to Azure App Service
+name: Build App and Deploy
 
 on:
   push:
     branches:
       - main
 
-env:
-  AZURE_WEBAPP_NAME: softcanada
-  ACTIONS_RUNNER_DEBUG: true
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
+      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Setup Node.js
-      - name: Setup Node.js
+      # Setup Node.js and cache npm dependencies
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18.x"
+          node-version: "20.x"
           cache: "npm"
 
-      # Step 3: Cache npm dependencies
-      - name: Cache Node.js modules
+      # Cache node_modules to speed up dependency installation
+      - name: Cache node_modules
         uses: actions/cache@v3
+        id: node-modules-cache
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node_modules-
 
-      # Step 4: Install dependencies with npm ci
+      # Install dependencies
       - name: Install dependencies
-        run: npm ci --only=production
+        if: steps.node-modules-cache.outputs.cache-hit != 'true'
+        run: npm ci
 
-      # Step 5: Build the application
-      - name: Build the Next.js app
+      # Cache Next.js build cache
+      - name: Cache Next.js build cache
+        uses: actions/cache@v3
+        id: next-cache
+        with:
+          path: .next/cache
+          key: ${{ runner.os }}-nextjs-cache-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-cache-
+
+      # Build the Next.js app
+      - name: Build the app
         run: npm run build
 
-      # Step 6: Deploy to Azure App Service
-      - name: Deploy to Azure App Service
+      # Deploy to Azure Web App
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          app-name: "softcanada"
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: "."
