Add Jobs and Career Advisor pages, CV Builder styles, and update deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build App and Deploy
+name: Build and Deploy Next.js App to Azure
 
 on:
   push:
@@ -6,7 +6,9 @@ on:
       - main
 
 env:
+  NODE_VERSION: "20.x"
   ACTIONS_RUNNER_DEBUG: true
+  AZURE_WEBAPP_NAME: softcanada
   SCM_DO_BUILD_DURING_DEPLOYMENT: true
 
 jobs:
@@ -14,59 +16,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the code
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Setup Node.js and cache npm dependencies
-      - name: Set up Node.js
+      - name: Set up Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v3
         with:
-          node-version: "20.x"
-          cache: "npm"
+          node-version: ${{ env.NODE_VERSION }}
 
-      # Cache node_modules to speed up dependency installation
-      - name: Cache node_modules
+      - name: Cache Node.js dependencies
         uses: actions/cache@v3
-        id: node-modules-cache
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
+          path: |
+            ~/.npm
+            .next/cache
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules-
+            ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
 
-      # Install dependencies
-      - name: Install dependencies
-        if: steps.node-modules-cache.outputs.cache-hit != 'true'
+      - name: Install Dependencies
         run: npm ci
 
-      # Cache Next.js build cache
-      - name: Cache Next.js build cache
-        uses: actions/cache@v3
-        id: next-cache
-        with:
-          path: .next/cache
-          key: ${{ runner.os }}-nextjs-cache-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-cache-
-
-      # Build the app
-      - name: Build the app
+      - name: Build Next.js App
         run: npm run build
 
-        # Create a ZIP file of the build artifacts
-      - name: Create deployment package
-        run: |
-          mkdir -p deployment
-          cp -r .next public package.json deployment/
-          cd deployment
-          zip -r ../deployment.zip .
-        shell: bash
-
-      # Deploy to Azure Web App
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "softcanada"
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: "."
