Add Dockerfile for containerization, update package dependencies, and implement CV builder components

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,45 @@
-name: Build and Deploy Next.js App to Azure
+name: Deploy App to Azure
 
 on:
   push:
     branches:
       - main
 
-env:
-  NODE_VERSION: "20.x"
-  ACTIONS_RUNNER_DEBUG: true
-  AZURE_WEBAPP_NAME: softcanada
-  SCM_DO_BUILD_DURING_DEPLOYMENT: true
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v3
+      # Step 2: Log in to Azure
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Cache Node.js dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.npm
-            .next/cache
-          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-${{ env.NODE_VERSION }}-
+      # Step 3: Build Docker Image
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.ACR_NAME }}.azurecr.io/nextjs-app:${{ github.sha }} .
 
-      - name: Install Dependencies
-        run: npm ci
+      # Step 4: Log in to Azure Container Registry
+      - name: Log in to ACR
+        run: |
+          echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u ${{ secrets.ACR_USERNAME }} --password-stdin
 
-      - name: Build Next.js App
-        run: npm run build
+      # Step 5: Push Docker Image to ACR
+      - name: Push Docker Image to ACR
+        run: |
+          docker push ${{ secrets.ACR_NAME }}.azurecr.io/nextjs-app:${{ github.sha }}
 
+      # Step 6: Deploy Docker Image to Azure App Service
       - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: "."
+        run: |
+          az webapp config container set \
+            --name ${{ secrets.WEBAPP_NAME }} \
+            --resource-group ${{ secrets.RESOURCE_GROUP }} \
+            --docker-custom-image-name ${{ secrets.ACR_NAME }}.azurecr.io/nextjs-app:${{ github.sha }} \
+            --docker-registry-server-url https://${{ secrets.ACR_NAME }}.azurecr.io
