--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.2",
-    "antd": "^5.22.1",
+    "@hookform/resolvers": "^3.9.1",
+    "antd": "^5.22.2",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.12.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "softcan": "file:",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
