--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.12.0",
     "next": "15.0.3",
-    "next-auth": "^4.24.10",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
