--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@hookform/resolvers": "^3.9.1",
     "antd": "^5.22.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.12.0",
     "next": "15.0.3",
-    "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
