--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18.x"
+          node-version: "20.x"
 
       # Step 3: Install dependencies
       - name: Install dependencies
@@ -28,12 +28,16 @@ jobs:
       - name: Build Next.js app
         run: npm run build
 
-      # Step 5: Deploy to Azure Static Web App
+      # Step 5: Prune development dependencies
+      - name: Prune development dependencies
+        run: npm prune --production
+
+      # Step 6: Deploy to Azure Static Web App
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          action: "upload" # Specify the action
+          action: "upload"
           app_location: "/" # The root directory of your app
           output_location: ".next" # The location of the build output
           api_location: "" # Leave empty for no API
