--- a/.github/workflows/main_softcanada.yml
+++ b/.github/workflows/main_softcanada.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy container app to Azure Web App - softcanada
 
 on:
@@ -11,41 +8,41 @@ on:
 
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Log in to registry
-      uses: docker/login-action@v2
-      with:
-        registry: https://softcanada.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_ff7f876c9d18464e9012fe878663c7ed }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_a4bb7bafa9044792ad5a66870d55fc4a }}
+      - name: Log in to registry
+        uses: docker/login-action@v2
+        with:
+          registry: https://softcanada.azurecr.io/
+          username: ${{ secrets.AzureAppService_ContainerUsername_ff7f876c9d18464e9012fe878663c7ed }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_a4bb7bafa9044792ad5a66870d55fc4a }}
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: softcanada.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_ff7f876c9d18464e9012fe878663c7ed }}/nextjs-app:${{ github.sha }}
-        file: ./Dockerfile
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: softcanada.azurecr.io/softcanada/nextjs-app:${{ github.sha }}
+          file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'production'
+      name: "production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'softcanada'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_8b3e7d51ff7d46bc8a220a8774acea88 }}
-        images: 'softcanada.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_ff7f876c9d18464e9012fe878663c7ed }}/nextjs-app:${{ github.sha }}'
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: "softcanada"
+          slot-name: "production"
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_8b3e7d51ff7d46bc8a220a8774acea88 }}
+          images: "softcanada.azurecr.io/softcanada/nextjs-app:${{ github.sha }}"
