--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@hookform/resolvers": "^3.9.1",
     "antd": "^5.22.2",
+    "axios": "^1.7.9",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.12.0",
     "next": "^15.0.4",
