--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.9.1",
     "antd": "^5.22.2",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.12.0",
     "next": "^15.0.4",
