--- a/.github/workflows/main_softcanada.yml
+++ b/.github/workflows/main_softcanada.yml
@@ -11,34 +11,43 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+          driver-opts: |
+            image=moby/buildkit:master
+
+      - name: Create cache directory
+        run: mkdir -p /tmp/.buildx-cache
 
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-docker-${{ github.sha }}
+          key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}-${{ github.sha }}
           restore-keys: |
+            ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}-
             ${{ runner.os }}-docker-
 
       - name: Log in to registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          registry: https://softcanada.azurecr.io/
+          registry: softcanada.azurecr.io
           username: ${{ secrets.AzureAppService_ContainerUsername_ff7f876c9d18464e9012fe878663c7ed }}
           password: ${{ secrets.AzureAppService_ContainerPassword_a4bb7bafa9044792ad5a66870d55fc4a }}
 
       - name: Build and push container image to registry
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
           tags: softcanada.azurecr.io/softcanada/nextjs-app:${{ github.sha }}
           file: ./Dockerfile
           cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
 
   deploy:
     runs-on: ubuntu-latest
