--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.17.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.473.0",
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-to-print": "^3.0.5",
     "softcan": "file:",
     "swr": "^2.3.0",
     "yup": "^1.6.1"
