--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ant-design/icons": "^5.5.2",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@casl/ability": "^6.7.3",
+    "@casl/react": "^5.0.0",
     "@hookform/resolvers": "^3.10.0",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
