--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@auth0/nextjs-auth0": "^4.3.0",
+    "@azure/cosmos": "^4.3.0",
     "@casl/ability": "^6.7.3",
     "@casl/react": "^5.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/typography": "^0.5.16",
+    "abstract-level": "^1.0.4",
     "antd": "^5.24.6",
     "axios": "^1.8.2",
     "clsx": "^2.1.1",
@@ -39,6 +41,7 @@
     "swr": "^2.3.0",
     "tailwind-merge": "^3.0.2",
     "tinacms": "^2.7.3",
+    "tinacms-gitprovider-github": "^2.0.16",
     "yup": "^1.6.1"
   },
   "devDependencies": {
