--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "tinacms dev -c \"npx cross-env NODE_OPTIONS=--inspect next dev --turbopack\"",
+    "dev": "tinacms dev --verbose -c \"npx cross-env NODE_OPTIONS=--inspect next dev --turbopack\"",
     "build": "tinacms build && next build",
     "start": "next start",
     "install:clean": "rm -rf node_modules && npm install --omit=dev",
@@ -31,6 +31,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.473.0",
     "next": "^15.1.4",
+    "next-tinacms-azure": "^1.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -40,7 +41,7 @@
     "softcan": "file:",
     "swr": "^2.3.0",
     "tailwind-merge": "^3.0.2",
-    "tinacms": "^2.7.3",
+    "tinacms": "^2.7.5",
     "tinacms-gitprovider-github": "^2.0.16",
     "yup": "^1.6.1"
   },
